--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -73,13 +73,30 @@ jobs:
 
           if (-not $found) {
             echo "zlib.h not found in any expected location"
-            echo "Installing zlib via vcpkg as fallback"
-            if (-not (Test-Path "C:\vcpkg")) {
-              git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
+            echo "Downloading zlib source and building manually"
+
+            # Download zlib source
+            $zlibVersion = "1.3"
+            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            $zlibDir = "C:\zlib-src"
+
+            New-Item -ItemType Directory -Force -Path $zlibDir
+            Invoke-WebRequest -Uri $zlibUrl -OutFile "$zlibDir\zlib.tar.gz"
+
+            # Extract using tar (available on Windows)
+            tar -xzf "$zlibDir\zlib.tar.gz" -C $zlibDir
+
+            # Find the extracted directory
+            $extractedDir = Get-ChildItem -Path $zlibDir -Directory | Where-Object { $_.Name -like "zlib-*" } | Select-Object -First 1
+            if ($extractedDir) {
+              $zlibSrcDir = $extractedDir.FullName
+              echo "Found zlib source at $zlibSrcDir"
+              echo "C_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+              echo "CPLUS_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+            } else {
+              echo "Failed to extract zlib source"
+              exit 1
             }
-            C:\vcpkg\vcpkg install zlib:x64-windows
-            echo "C_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
-            echo "CPLUS_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
           }
         shell: pwsh
 
@@ -187,13 +204,30 @@ jobs:
 
           if (-not $found) {
             echo "zlib.h not found in any expected location"
-            echo "Installing zlib via vcpkg as fallback"
-            if (-not (Test-Path "C:\vcpkg")) {
-              git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
+            echo "Downloading zlib source and building manually"
+
+            # Download zlib source
+            $zlibVersion = "1.3"
+            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            $zlibDir = "C:\zlib-src"
+
+            New-Item -ItemType Directory -Force -Path $zlibDir
+            Invoke-WebRequest -Uri $zlibUrl -OutFile "$zlibDir\zlib.tar.gz"
+
+            # Extract using tar (available on Windows)
+            tar -xzf "$zlibDir\zlib.tar.gz" -C $zlibDir
+
+            # Find the extracted directory
+            $extractedDir = Get-ChildItem -Path $zlibDir -Directory | Where-Object { $_.Name -like "zlib-*" } | Select-Object -First 1
+            if ($extractedDir) {
+              $zlibSrcDir = $extractedDir.FullName
+              echo "Found zlib source at $zlibSrcDir"
+              echo "C_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+              echo "CPLUS_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+            } else {
+              echo "Failed to extract zlib source"
+              exit 1
             }
-            C:\vcpkg\vcpkg install zlib:x64-windows
-            echo "C_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
-            echo "CPLUS_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
           }
         shell: pwsh
 
@@ -279,13 +313,30 @@ jobs:
 
           if (-not $found) {
             echo "zlib.h not found in any expected location"
-            echo "Installing zlib via vcpkg as fallback"
-            if (-not (Test-Path "C:\vcpkg")) {
-              git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
+            echo "Downloading zlib source and building manually"
+
+            # Download zlib source
+            $zlibVersion = "1.3"
+            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            $zlibDir = "C:\zlib-src"
+
+            New-Item -ItemType Directory -Force -Path $zlibDir
+            Invoke-WebRequest -Uri $zlibUrl -OutFile "$zlibDir\zlib.tar.gz"
+
+            # Extract using tar (available on Windows)
+            tar -xzf "$zlibDir\zlib.tar.gz" -C $zlibDir
+
+            # Find the extracted directory
+            $extractedDir = Get-ChildItem -Path $zlibDir -Directory | Where-Object { $_.Name -like "zlib-*" } | Select-Object -First 1
+            if ($extractedDir) {
+              $zlibSrcDir = $extractedDir.FullName
+              echo "Found zlib source at $zlibSrcDir"
+              echo "C_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+              echo "CPLUS_INCLUDE_PATH=$zlibSrcDir" >> $env:GITHUB_ENV
+            } else {
+              echo "Failed to extract zlib source"
+              exit 1
             }
-            C:\vcpkg\vcpkg install zlib:x64-windows
-            echo "C_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
-            echo "CPLUS_INCLUDE_PATH=C:\vcpkg\installed\x64-windows\include" >> $env:GITHUB_ENV
           }
         shell: pwsh
 
