--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -75,9 +75,8 @@ jobs:
             echo "zlib.h not found in any expected location"
             echo "Downloading zlib source and building manually"
 
-            # Download zlib source
-            $zlibVersion = "1.3"
-            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            # Download zlib source from GitHub (more reliable)
+            $zlibUrl = "https://github.com/madler/zlib/archive/refs/tags/v1.3.tar.gz"
             $zlibDir = "C:\zlib-src"
 
             New-Item -ItemType Directory -Force -Path $zlibDir
@@ -206,9 +205,8 @@ jobs:
             echo "zlib.h not found in any expected location"
             echo "Downloading zlib source and building manually"
 
-            # Download zlib source
-            $zlibVersion = "1.3"
-            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            # Download zlib source from GitHub (more reliable)
+            $zlibUrl = "https://github.com/madler/zlib/archive/refs/tags/v1.3.tar.gz"
             $zlibDir = "C:\zlib-src"
 
             New-Item -ItemType Directory -Force -Path $zlibDir
@@ -315,9 +313,8 @@ jobs:
             echo "zlib.h not found in any expected location"
             echo "Downloading zlib source and building manually"
 
-            # Download zlib source
-            $zlibVersion = "1.3"
-            $zlibUrl = "https://www.zlib.net/zlib-$zlibVersion.tar.gz"
+            # Download zlib source from GitHub (more reliable)
+            $zlibUrl = "https://github.com/madler/zlib/archive/refs/tags/v1.3.tar.gz"
             $zlibDir = "C:\zlib-src"
 
             New-Item -ItemType Directory -Force -Path $zlibDir
